# adb-mcp

./: .gitignore  EXAMPLES.TXT  README.md
adb-proxy/: package-lock.json  package.json  proxy.js
adb-proxy-socket/: package-lock.json  proxy.js  test-client.js
cep/com.mikechambers.ai/: commands.js  main.js
dxt/pr/: manifest.json
dxt/ps/: manifest.json
mcp/: ae-mcp.py  ai-mcp.py  core.py  id-mcp.py  pr-mcp.py  ps-mcp.py  pyproject.toml
mcp/src/ps_mcp/: __init__.py  __main__.py  pr-mcp.py  psmcp.py  socket_client.py
pr-uxp/: manifest.json
pr-uxp/commands/: index.js
psmcp/: fonts.py  logger.py  premeiremxp.py  premieremxp.py  psmcp.py  pyproject.toml  requirements.txt  socket_client.py
psuxp/: commands.js  index.html  main.js  manifest.json  style.css
psuxp/commands/: index.js
uxp/id/: index.html  main.js  manifest.json
uxp/id/commands/: index.js
uxp/pr/: main.js  manifest.json
uxp/pr/commands/: consts.js  core.js  index.js  utils.js
uxp/ps/: index.html  main.js  manifest.json
uxp/ps/commands/: adjustment_layers.js  core.js  filters.js  index.js  layer_styles.js  layers.js  selection.js  utils.js
