[project]
name = "ps-mcp"
version = "0.85.3"
description = "Adobe Photoshop automation using MCP"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Mike Chambers", email = "mikechambers@gmail.com"}
]
dependencies = [
    "fonttools",
    "python-socketio",
    "mcp[cli]",
    "requests",
    "websocket-client>=1.8.0",
    "pillow>=11.2.1",
]

[project.scripts]
ps-mcp = "ps_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]

[tool.setuptools]
py-modules = ["fonts", "logger", "socket_client"]


